# test-farm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.claude/: CLAUDE.md  best-practices.md  settings.json
docs/: disruptor-tc-planning.md
docs/adr/: 0001-router-container-with-explicit-routing.md  0002-tc-planned-usage.md
docs/agents/: domain.md
docs/specs/: best-practices.md  design_controlled_test_farm.md  design_disruptor.md  mission.md  tech-stack.md
runtime/bundles/: baseline
runtime/router/: Dockerfile
runtime/toy_client/: Dockerfile
runtime/toy_update_server/: Dockerfile
scripts/: baseline.yaml
specs/: design_controlled_test_farm.md  mission.md  tech-stack.md
src/disruptor/: cli.py  device_tree.py  discovery.py  impairment.py  models.py  planning.py  scenario.py
src/test_farm/: __init__.py  bundles.py  cli.py  controller.py  disruptor.py  disruptor_cli.py  identifiers.py  invocation.py  models.py  network_impairment.py  scenario.py
src/test_farm/disruptor/: cli.py  device_tree.py  discovery.py  models.py  planning.py
src/test_farm/runtime/: __init__.py  command_runner.py  invocation_protocol.py  networking.py  preparation.py
src/test_farm/runtime/invocation/: docker.py  factory.py  in_process.py
src/test_farm/subjects/: __init__.py  toy_client.py  toy_client_runtime.py  update_server.py  update_server_runtime.py
test/: conftest.py  test_cli.py  test_controller.py  test_invocation.py  test_runtime_invocation.py  test_runtime_invocation_integration.py  test_runtime_preparation.py  test_scenario.py  test_toy_client.py  test_toy_client_runtime.py  test_update_server.py
test/disruptor/: test_device_tree.py  test_disruptor.py  test_disruptor_cli.py
